multiple PHP applications working

--- a/examples/sites-enabled/php1.vagrant.conf
+++ b/examples/sites-enabled/php1.vagrant.conf
@@ -1,7 +1,7 @@
 server {
     listen       80;
-    server_name  test.vagrant.com;
-    root /srv/sites/test.vagrant.com;
+    server_name  php1.vagrant.com;
+    root /srv/phpapplications/phpapplication1;
 
     location / {
         index  index.php;
