working on hopper

--- a/webServer/Dockerfile
+++ b/webServer/Dockerfile
@@ -1,9 +1,7 @@
-FROM base
+FROM playduino
 MAINTAINER alex alex@decoded.co
 USER root
 ADD ./build /build
 RUN chmod 777 /build/*
 RUN /build/customInstall.sh
-#USER amlwwalker
-RUN /build/setup.sh
-RUN /build/installrevel.sh
+USER amlwwalker
